--- a/package.json
+++ b/package.json
@@ -29,16 +29,19 @@
     "@nestjs/mapped-types": "^2.1.0",
     "@nestjs/passport": "^11.0.5",
     "@nestjs/platform-express": "^11.0.1",
+    "@nestjs/schedule": "^6.0.0",
     "@nestjs/swagger": "^11.2.0",
     "@nestjs/throttler": "^6.4.0",
     "@prisma/client": "6.14.0",
     "argon2": "^0.44.0",
+    "autocannon": "^8.0.0",
     "bullmq": "^5.58.1",
     "cache-manager": "^7.1.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.2",
     "cloudinary": "^2.7.0",
     "file-type": "^21.0.0",
+    "ioredis": "^5.7.0",
     "passport-google-oauth20": "^2.0.0",
     "passport-jwt": "^4.0.1",
     "qrcode": "^1.5.4",
